# rslides

./: .gitignore  Cargo.toml  LICENSE  README.md  demo.md  theme.example
.github/workflows/: ci.yml
src/: app.rs  lib.rs  main.rs  model.rs  parser.rs
src/render/: bigtext.rs  code.rs  image_ascii.rs  layout.rs  mod.rs  table.rs  text.rs
tests/: integration.rs
