[package]
name = "rslides"
version = "0.1.0"
edition = "2024"
description = "Terminal-native Markdown slide decks with code highlighting and image support."
license-file = "LICENSE"
readme = "README.md"
keywords = ["slides", "terminal", "markdown", "presentation", "cli"]
categories = ["command-line-utilities", "text-processing", "multimedia"]

[dependencies]
crossterm = "0.29"
pulldown-cmark = "0.13"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif"] }
syntect = { version = "5.2", default-features = true }
resvg = "0.45"
